# aatbecpp

./: .clang-format  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  debug.plist  gcovr.sh  hello.aat  lang.cpp  meson.build  rtests.sh  run.sh
examples/: fib.aat  hello.aat  primes.aat
include/: codegen.hpp  jit.hpp
include/codegen/: context.hpp  expression.hpp
include/lexer/: lexer.hpp  token.hpp
include/parser/: ast.hpp  atoms.hpp  bindings.hpp  enums.hpp  expression.hpp  parameters.hpp  parser.hpp  terminal.hpp  terminals.hpp  type.hpp
include/source/: source_file.hpp
include/typesys/: type_system.hpp
src/: codegen.cpp  jit.cpp
src/codegen/: expression.cpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: bindings.cpp  expression.cpp  module.cpp  parser.cpp  type.cpp
src/source/: source_file.cpp
src/typesys/: type_system.cpp
tests/: meson.build
tests/src/: lexer.cpp
tests/src/parser/: atoms.cpp  base.hpp  expressions.cpp  functions.cpp  module.cpp  terminals.cpp  types.cpp
tests/src/typesys/: struct.cpp
